[gd_scene load_steps=6 format=3 uid="uid://d08pcc1fpnw0j"]

[ext_resource type="Script" uid="uid://d0awbb2cmmjhs" path="res://scenes/entities/enemies/skeleton/skeleton.gd" id="1_t8pow"]
[ext_resource type="Script" uid="uid://y1ixaqjddf8j" path="res://scenes/entities/enemies/range_area.gd" id="2_qlua5"]
[ext_resource type="Script" uid="uid://ckhyyidxy4lij" path="res://scenes/entities/enemies/health_bar.gd" id="3_huws8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ie6e"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_abfcy"]

[node name="Skeleton" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 3
script = ExtResource("1_t8pow")

[node name="Hitbox" type="CollisionShape2D" parent="."]
y_sort_enabled = true
shape = SubResource("CircleShape2D_4ie6e")

[node name="Sprite" type="Sprite2D" parent="."]
y_sort_enabled = true

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_qlua5")

[node name="CollisionCircle" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_abfcy")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
path_postprocessing = 1
radius = 8.0

[node name="HealthBar" type="Node2D" parent="."]
z_index = 2
position = Vector2(-6, -12)
script = ExtResource("3_huws8")

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
